objects/Account.object
<CustomObject><fields>
        <fullName>Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer Not To Say</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>White British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy or Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other White background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Black Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other ethnic group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other Mixed / multiple ethnic background</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Free_Membership_Reason__c</fullName>
        <label>Free Membership Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Volunteering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concessionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 25</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Gender__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Not To Say</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <picklist>
            <picklistValues>
                <fullName>Not Known</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Is_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tutor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Volunteer</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>MemberStatus__c</fullName>
        <label>Historical Membership Status</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Membership_Class__c</fullName>
        <label>Membership Class</label>
        <picklist>
            <picklistValues>
                <fullName>Supporter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Member (fee-paying)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member (free)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Membership_Renewal_Date__c</fullName>
        <label>Membership Renewal Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ONS_District__c</fullName>
        <label>ONS District</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ONS_Region__c</fullName>
        <label>ONS Region</label>
        <picklist>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and The Humber</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Old_Branch__c</fullName>
        <label>Old Branch</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>WEA_Region__c</fullName>
        <label>WEA Region</label>
        <picklist>
            <picklistValues>
                <fullName>Association Services</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and Humber</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes><recordTypes>
        <fullName>Test_SFDC</fullName>
        <active>true</active>
        <label>Test SFDC</label>
    </recordTypes><recordTypes>
        <fullName>WEA_Branch</fullName>
        <active>true</active>
        <label>WEA Branch</label>
    </recordTypes><recordTypes>
        <fullName>WEA_Region</fullName>
        <active>true</active>
        <label>WEA Region</label>
    </recordTypes></CustomObject>